// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled "withComponent" will replace tags but keep styling classes 1`] = `
<DocumentFragment>
  <article>
    () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)() =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
  </article>
</DocumentFragment>
`;

exports[`styled basic render 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled basic render with object as style 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled call expression 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled component selectors 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled composing components 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled composition 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled composition 2`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled composition based on props 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled composition based on props 2`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled function in expression 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled glamorous style api & composition 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled handles more than 10 dynamic properties 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled higher order component 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled inline function return value is a function 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled input placeholder 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled input placeholder object 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled keyframes with css call 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled nested 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled no dynamic 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled object as class 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled object as style 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled object composition 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled objects 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled objects with spread properties 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled prop filtering 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled random expressions undefined return 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled random object expression 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled same component rendered multiple times 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled same component rendered multiple times 2`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled throws if undefined is passed as the component 1`] = `
"You are trying to create a styled element with an undefined component.
You may have forgotten to import it."
`;

exports[`styled withComponent does carry styles from flattened component 1`] = `
<DocumentFragment>
  () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
</DocumentFragment>
`;

exports[`styled withComponent with function interpolation 1`] = `
<DocumentFragment>
  <article>
    () =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)() =&gt; /* @__PURE__ */ (0, import_vue.h)(import_vue.Fragment, null, possiblyStyleElement, StyledElement)
  </article>
</DocumentFragment>
`;
